--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-portfolio</title>
+    <style>
+        body{
+            background-color: azure;
+        }
+        hr{
+            border-style:none;
+            border-top-style: dotted;
+            border-color: gray;
+            border-width: 5px;
+            width: 5%;
+        }
+        h1,h3,h4,strong{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <table cellspacing="20px">
